--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,12 @@ python-dotenv>=1.0.0           # .env file loading
 # HTTP requests
 requests>=2.28.0               # API calls
 
+# WebSocket for real-time data
+websockets>=12.0               # WebSocket client for market data
+
+# Terminal UI
+textual>=1.0.0                 # Modern TUI framework
+
 # =============================================================================
 # Polymarket API Clients (Optional - for advanced usage)
 # =============================================================================
